4/22/2013 Moved Sim.js and related classes from repo "scenery-phet".  If you want their history before this, you will have to look over there.