@@ -16,11 +16,12 @@ define( function( require ) {
   'use strict';
 
   //TODO add optional backgroundColor property
-  function Tab( name, icon, createModel, createView ) {
+  function Tab( name, icon, createModel, createView, backgroundColor ) {
     this.name = name;
     this.icon = icon;
     this.createModel = createModel;
     this.createView = createView;
+    this.backgroundColor = backgroundColor || 'white';
   }
 
   return Tab;
