@@ -1,1 +1,2 @@
+4/22/13 implemented background-color switching for Tabs
 4/22/2013 Moved Sim.js and related classes from repo "scenery-phet".  If you want their history before this, you will have to look over there.
